Added Hammer Tap Function to Change Backround Color

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
-    <body>
+    <body id="bg">
 	<div class="welcome">
 		<p>This sample is using Hammer.js<br>
 		Drage and Drop the pictures, zoom with the pinch and rotate
