--- a/index.html
+++ b/index.html
@@ -17,17 +17,39 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/style.css" type="text/css">
+	    <link rel="stylesheet" href="css/style.css" type="text/css">
+	    <link rel="stylesheet" href="css/bootstrap.min.css">
 
 
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
     <body id="bg">
+    	<div class="navbar navbar-inverse navbar-fixed-top role="navigation">
+    		<div class="container">
+    			<div class="navbar-header">
+    				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+    					<span class="sr-only">Toggle Navigation</span>
+    					<span class="icon-bar"></span>
+    					<span class="icon-bar"></span>
+    					<span class="icon-bar"></span>
+    				</button>
+    				<a class="navbar-brand" href="#">Project Name</a>
+    			</div>
+    			<div class="collapse navbar-collapse">
+    				<ul class="nav navbar-nav">
+    					<li class="active"><a href="#">Home</a></li>
+    					<li><a href="#about">About</a></li>
+    					<li><a href="#contact">Contact</a></li>
+    				</ul>
+    			</div>
+    		</div>
+    	</div>
 	<div class="welcome">
-		<p>This sample is using Hammer.js<br>
+		<p id="text">This sample is using Hammer.js<br>
 		Drage and Drop the pictures, zoom with the pinch and rotate
 		them.</p>
 	</div>
+	
 	<div id="zoomwrapper">
 		<div id="zoom" class="zoomProps">
 			<div class="polaroid">
@@ -53,8 +75,9 @@
        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script> 
         <script src="js/hammer.js"></script>
-	<script src="js/jquery.hammer.js"></script>
-	<script src="js/myLogic.js"></script>
+		<script src="js/jquery.hammer.js"></script>
+		<script src="js/myLogic.js"></script>
+		<script src="js/bootstrap.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
